<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="end"
        android:weightSum="1">

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_gravity="end"
            android:text="@string/startServer"/>

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_gravity="end"
            android:text="@string/openCamera"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/threads"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text=""
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:text=""
            android:maxLines="500"
            android:scrollbars="vertical"
            android:gravity="bottom"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_gravity="end"
            android:text="@string/stopServer"
            android:visibility="invisible"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>